--- a/styles/style.css
+++ b/styles/style.css
@@ -152,13 +152,15 @@ figure {
 }
 
 .content__picture-caption {
+  font-size: 18px;
+  font-weight: 400;
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid var(--text-color);
 }
 
 .content__blockquote {
-  font-size: inherit;
+  font-size: 18px;
   font-style: italic;
   line-height: 200%;
   margin: 0 auto 1.5em;
@@ -171,8 +173,7 @@ figure {
   justify-content: center;
   align-items: center;
   margin-top: 7%;
-  width: 100%;
-  height: 70.5vw;
+  aspect-ratio: 4/3;
   border: 1px solid var(--text-color);
 }
 
